--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Python for Comp 1/.ipynb_checkpoints/Python for IPO-checkpoint.ipynb
 Python for Comp 1/.ipynb_checkpoints/Comp1_NewVars_Norm_Working-checkpoint.ipynb
+Python for Comp 1/.ipynb_checkpoints/Recoding SIC Code to Industry Division-checkpoint.ipynb
