--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 Python for Comp 1/.ipynb_checkpoints/Python for IPO-checkpoint.ipynb
 Python for Comp 1/.ipynb_checkpoints/Comp1_NewVars_Norm_Working-checkpoint.ipynb
+Python for Comp 1/.ipynb_checkpoints/Sug_Task_Jan28-Copy1-checkpoint.ipynb
+Python for Comp 1/.ipynb_checkpoints/Sug_Task_Jan28-checkpoint.ipynb
+Python for Comp 1/.ipynb_checkpoints/Tim's Scratch-checkpoint.ipynb
