Update - Milestone & Model

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ Python for Comp 1/Scratch Files/.ipynb_checkpoints/Log model Scratch-checkpoint.
 Python for Comp 1/Scratch Files/.ipynb_checkpoints/Scratch Jan26-checkpoint.ipynb
 Python for Comp 1/Scratch Files/.ipynb_checkpoints/Decimal Scaling_DE-checkpoint.ipynb
 Python for Comp 1/Scratch Files/.ipynb_checkpoints/Sug_Task_Jan28-checkpoint.ipynb
+Python for Comp 1/__pycache__/outliers.cpython-36.pyc
+Python for Comp 1/__pycache__/outliers.cpython-36.pyc
+Python for Comp 1/Untitled.ipynb
+Python for Comp 1/Scratch Files/.ipynb_checkpoints/Sug_Task_Jan28-Copy1-checkpoint.ipynb
+Python for Comp 1/__pycache__/Recoding_SIC_Codes.cpython-36.pyc
