--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Python for Comp 1/__pycache__/outliers.cpython-36.pyc
 Python for Comp 1/Untitled.ipynb
 Python for Comp 1/Scratch Files/.ipynb_checkpoints/Sug_Task_Jan28-Copy1-checkpoint.ipynb
 Python for Comp 1/__pycache__/Recoding_SIC_Codes.cpython-36.pyc
+Python for Comp 1/__pycache__/Standardising.cpython-36.pyc
