Updated the milestone report

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ Python for Comp 1/__pycache__/Recoding_SIC_Codes.cpython-36.pyc
 Python for Comp 1/__pycache__/Standardising.cpython-36.pyc
 Python for Comp 1/.ipynb_checkpoints/Milestone Report-checkpoint.ipynb
 Python for Comp 1/.ipynb_checkpoints/Milestone Report-checkpoint.ipynb
+Python for Comp 1/.ipynb_checkpoints/Milestone Report-checkpoint.ipynb
