--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ Python for Comp 1/.ipynb_checkpoints/Milestone Report-checkpoint.ipynb
 Python for Comp 1/.ipynb_checkpoints/Milestone Report-checkpoint.ipynb
 Python for Comp 1/.ipynb_checkpoints/Milestone Report-checkpoint.ipynb
 Python for Comp 1/.ipynb_checkpoints/Milestone Report-checkpoint.ipynb
+.ipynb_checkpoints/Model For loop-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Log model Scratch-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Decimal Scaling_DE-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Sug_Task_Jan28-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Scratch Jan26-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Danielle's Scratch-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Tim's Scratch-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Sug_Task_Jan28-Copy1-checkpoint.ipynb
