--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ Scratch Files/.ipynb_checkpoints/Scratch Jan26-checkpoint.ipynb
 Scratch Files/.ipynb_checkpoints/Danielle's Scratch-checkpoint.ipynb
 Scratch Files/.ipynb_checkpoints/Tim's Scratch-checkpoint.ipynb
 Scratch Files/.ipynb_checkpoints/Sug_Task_Jan28-Copy1-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Scratch Log Model-checkpoint.ipynb
+Scratch Files/__pycache__/new_var.cpython-36.pyc
+__pycache__/new_var.cpython-36.pyc
+__pycache__/Recoding_SIC_Codes.cpython-36.pyc
+*.pyc
+*.pyc
