--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ __pycache__/new_var.cpython-36.pyc
 __pycache__/Recoding_SIC_Codes.cpython-36.pyc
 *.pyc
 *.pyc
+.ipynb_checkpoints/Milestone Report-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Conor Scratch-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Milestone Report-Copy1-checkpoint.ipynb
