--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@ __pycache__/Recoding_SIC_Codes.cpython-36.pyc
 .ipynb_checkpoints/Milestone Report-checkpoint.ipynb
 Scratch Files/.ipynb_checkpoints/Conor Scratch-checkpoint.ipynb
 Scratch Files/.ipynb_checkpoints/Milestone Report-Copy1-checkpoint.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/model 1-checkpoint.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/model 3-checkpoint.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/model 4-checkpoint.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/model 2-checkpoint.ipynb
