--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Scratch Files/.ipynb_checkpoints/Recoding SIC Code to Industry Division-checkpoi
 Scratch Files/.ipynb_checkpoints/Recoding SIC Code to Industry Division-checkpoint.ipynb
 Scratch Files/.ipynb_checkpoints/Recoding SIC Code to Manufacturing-checkpoint.ipynb
 Scratch Files/ChiSq_DE.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/model 1-Copy1-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/ChiSq_DE-checkpoint.ipynb
