--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@ Scratch Files/.ipynb_checkpoints/Recoding SIC Code to Manufacturing-checkpoint.i
 Scratch Files/ChiSq_DE.ipynb
 Scratch Files/Model Version Control/.ipynb_checkpoints/model 1-Copy1-checkpoint.ipynb
 Scratch Files/.ipynb_checkpoints/ChiSq_DE-checkpoint.ipynb
+Scratch Files/.ipynb_checkpoints/Recoding SIC Code to Industry Division-checkpoint.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/Model 1 Ver 2-Copy1-checkpoint.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/Model 1 Ver 2-checkpoint.ipynb
