I3 Updates Update Correlation

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ Scratch Files/.ipynb_checkpoints/ChiSq_DE-checkpoint.ipynb
 Scratch Files/.ipynb_checkpoints/Recoding SIC Code to Industry Division-checkpoint.ipynb
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model 1 Ver 2-Copy1-checkpoint.ipynb
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model 1 Ver 2-checkpoint.ipynb
+~$Competition #1 Raw Data_UPDATED I3.xlsx
+~$I3 Updates.xlsx
