--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ Scratch Files/Model Version Control/.ipynb_checkpoints/Model 1 Ver 2-Copy1-check
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model 1 Ver 2-checkpoint.ipynb
 ~$Competition #1 Raw Data_UPDATED I3.xlsx
 ~$I3 Updates.xlsx
+Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-UpdateCorrelation-checkpoint.ipynb
