--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ Scratch Files/Model Version Control/.ipynb_checkpoints/Model 1 Ver 2-checkpoint.
 ~$Competition #1 Raw Data_UPDATED I3.xlsx
 ~$I3 Updates.xlsx
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-UpdateCorrelation-checkpoint.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-UpdateCorrelation-checkpoint.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-UpdateCorrelation-checkpoint.ipynb
