--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Scratch Files/Model Version Control/.ipynb_checkpoints/Model 1 Ver 2-checkpoint.
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-UpdateCorrelation-checkpoint.ipynb
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-UpdateCorrelation-checkpoint.ipynb
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-UpdateCorrelation-checkpoint.ipynb
+Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 100 runs - 03Mar-checkpoint.ipynb
