--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-Upd
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-UpdateCorrelation-checkpoint.ipynb
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 02_03_2018-UpdateCorrelation-checkpoint.ipynb
 Scratch Files/Model Version Control/.ipynb_checkpoints/Model Code 100 runs - 03Mar-checkpoint.ipynb
+.ipynb_checkpoints/Final Report-checkpoint.ipynb
